--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,5 @@
 <div class="container">
-  <div class="card mt-5">
-    <div class="card-body">
-      <button mat-raised-button color="primary" (click)="getRandomJoke()">Get A Joke</button>
-      <div class="col-12 text-center">
-        {{randomJoke?.text }}
-      </div>
-    </div>
-  </div>
+  <app-layout>
+    <router-outlet></router-outlet>
+  </app-layout>
 </div>
